--- a/Lab2/index.html
+++ b/Lab2/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lab #1</title>
     <link rel="stylesheet" href="styles/style.css" />
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </head>
   <body>
     <header>
@@ -103,15 +103,4 @@
       <h2>the world is gonna roll me</h2>
     </footer>
   </body>
-  <script>
-    window.onload = function() {
-      document.forms['getNumber'].hidden = false;
-      changeBlocksContent();
-      showResult();
-      reverseNumber();
-      showCookie();
-      changeBorderColor();
-
-	}
-  </script>
 </html>
